force-app/main/default/objects/Document_Template__c/fields/is_Standard__c.field-meta.xml
<CustomField>
    <fullName>is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Standard</label>
    <type>Checkbox</type>
</CustomField>