force-app/main/default/objects/Document_Template__c/fields/Long__c.field-meta.xml
<CustomField>
    <fullName>Long__c</fullName>
    <label>Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>