force-app/main/default/objects/Document_Template__c/fields/Parent_Base_Document_Template1__c.field-meta.xml
<CustomField>
    <fullName>Parent_Base_Document_Template1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent_Base_Document_Template1</label>
    <referenceTo>Cross_Selling__c</referenceTo>
    <relationshipLabel>Document Templates</relationshipLabel>
    <relationshipName>Document_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>