force-app/main/default/objects/Document_Template__c/fields/Parent_Base_Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Base_Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Base Document Template</label>
    <referenceTo>Base_Document_Template__c</referenceTo>
    <relationshipLabel>Document Templates</relationshipLabel>
    <relationshipName>Document_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>