force-app/main/default/objects/Document_Template__c/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <label>Permission Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>