force-app/main/default/objects/Document_Template__c/fields/Rich_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Field__c</fullName>
    <label>Rich Text Field</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>