force-app/main/default/objects/Document_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>isActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Permission_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>